# rust-sandbox

chat-server/: Cargo.toml  README.md
chat-server/environments/: docker-compose.yml
chat-server/environments/kong/: Dockerfile
chat-server/environments/proxy-kong/: Dockerfile  kong.template.yml  start.sh
chat-server/loadTesting/: README.md  package.json  tsconfig.json  webpack.config.js
chat-server/loadTesting/src/: receiver.test.ts  sender.test.ts
chat-server/modules/app/: Cargo.toml
chat-server/modules/app/src/: main.rs  rooms_handler.rs
chat-server/modules/domain/: Cargo.toml
chat-server/modules/domain/src/: lib.rs
chat-server/modules/domain/src/actors/: audience.rs  chat.rs  entrance.rs  mod.rs  room.rs
chat-server/modules/domain/src/chat/: comment.rs
chat-server/modules/driver/: Cargo.toml
chat-server/modules/driver/src/: comment_driver.rs  lib.rs  test_rs_streams.rs
chat-server/modules/gateway/: Cargo.toml
chat-server/modules/gateway/src/: comment_gateway.rs  lib.rs
chat-server/modules/port/: Cargo.toml
chat-server/modules/port/src/: comment_port.rs  lib.rs
chat-server/modules/usecase/: Cargo.toml
hello-axum/: Cargo.toml  test.http
hello-axum/app/: Cargo.toml
hello-axum/app/src/: helper.rs  main.rs
hello-axum/app/src/handler/: helper.rs  mod.rs  purchase.rs
hello-axum/docker/: docker-compose.yml
hello-axum/docker/purchase_db/: Dockerfile
hello-axum/docker/purchase_db/data/: 001_creta_database.sql  002_creta_table_item_stock.sql  003_create_table_purchase.sql
hello-axum/domain/: Cargo.toml
hello-axum/domain/src/: customer.rs  item.rs  lib.rs  purchase.rs
hello-axum/driver/: Cargo.toml
hello-axum/driver/src/: item_stock_table.rs  lib.rs  purchase_item_table.rs  purchase_table.rs
hello-axum/gateway/: Cargo.toml
hello-axum/gateway/src/: item_stock_gateway.rs  lib.rs  purchase_gateway.rs
hello-axum/port/: Cargo.toml
hello-axum/port/src/: item_stock_port.rs  lib.rs  purchase_port.rs
hello-axum/usecase/: Cargo.toml
hello-axum/usecase/src/: lib.rs  purchase_item.rs
