[package]
name = "app"
version = "1.0.0"
edition = "2018"

[dependencies]
domain = { path = "../domain" }
usecase = { path = "../usecase" }
gateway = { path = "../gateway" }
async-trait = "0.1.51"
chrono = "0.4"
axum = "0.1.3"
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.8.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tower = "0.4.8"
ulid = { version = "0.4.1" }
sqlx = { version = "0.5.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
anyhow = "1"
thiserror = "1"