[package]
name = "driver"
version = "1.0.0"
edition = "2018"

[dependencies]
async-trait = "0.1.51"
chrono = "0.4"
sqlx = { version = "0.5.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1"
thiserror = "1"
