[package]
name = "app"
version = "1.0.0"
edition = "2021"

[dependencies]
actix = "0.12"
actix-codec = "0.4"
actix-web = "4.0.0-beta.9"
actix-web-actors = "4.0.0-beta.7"
futures = "0.3.17"
tokio = "1.13.0"

env_logger = "0.9"

tracing = "0.1"
tracing-subscriber = "0.2"

bytes = "1.1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

redis = { version = "0.21.2", features = ["connection-manager", "aio", "tokio-comp", "cluster"] }

# Internal Dependencies
domain = { path = "../domain" }
usecase = { path = "../usecase" }
gateway = { path = "../gateway" }