[package]
name = "driver"
version = "1.0.0"
edition = "2021"

[dependencies]
bb8-redis = "0.11"
redis = { version = "0.21.1", features = ["streams"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.8.0"
tokio = { version = "1.18", features = ["full"] }

[dev-dependencies]
testcontainers = "0.13"
